# django-stdimage

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  FUNDING.yml  MANIFEST.in  README.md  README.rst  pytest.ini  requirements-dev.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml  tests.yml
stdimage/: __init__.py  fields.py  forms.py  models.py  utils.py  validators.py  widgets.py
stdimage/management/commands/: rendervariations.py
stdimage/templates/stdimage/: admin_widget.html
tests/: admin.py  conftest.py  forms.py  models.py  settings.py  test_commands.py  test_fields.py  test_forms.py  test_models.py  test_utils.py  test_validators.py  tests.py  urls.py
tests/testproject/: forms.py  models.py  tests.py
