[metadata]
name = django-stdimage
author = Johannes Hoppe
author_email = info@johanneshoppe.com
description = Django Standarized Image Field
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codingjoe/django-stdimage
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Framework :: Django

[options]
include_package_data = True
packages = stdimage
install_requires =
    Django>=1.11
    pillow>=2.5
    progressbar2>=3.0.0
setup_requires =
    setuptools_scm
    pytest-runner
tests_require =
    pytest
    pytest-cov
    pytest-django

[options.package_data]
* = *.txt, *.rst, *.html, *.po

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
norecursedirs=venv env .eggs
DJANGO_SETTINGS_MODULE=tests.settings
addopts = --cov=stdimage --cov-report xml --tb=short -rxs --nomigrations

[tox:tox]
envlist = py{36,37}-dj{111,22,master}

[testenv]
deps =
    dj111: https://github.com/django/django/archive/stable/1.11.x.tar.gz#egg=django
    dj22: https://github.com/django/django/archive/stable/2.2.x.tar.gz#egg=django
    djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
commands = python setup.py test

[flake8]
max-line-length = 88
statistics = true
show-source = true
exclude = */migrations/*,docs/*,env/*,venv/*,.tox/*,.eggs

[pydocstyle]
add-ignore = D1
match-dir = (?!tests|env|docs|\.).*

[coverage:run]
source = .
omit =
  */migrations/*
  */tests/*
  */test_*.py
  .tox

[coverage:report]
ignore_errors = True
show_missing = True

[isort]
atomic = true
line_length = 88
known_first_party = stdimage, tests
include_trailing_comma = True
default_section=THIRDPARTY
combine_as_imports = true
